# env_file_reader

./: CHANGELOG.rst  Cargo.toml  README.md  README.rst  TODO.md
.github/workflows/: build.yml
examples/: .env  .env.comments  .env.exported  .env.multiline  .env.quotes  .env.utf8  env_file1  env_file2
src/: env_file.lalrpop  lexer.rs  lib.rs
tests/: tests.rs
