[package]
name = "env-file-reader"
version = "0.2.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "functions for reading environment variables from a file"
homepage = "https://github.com/jofas/env_file_reader"
repository = "https://github.com/jofas/env_file_reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.5.4"
lazy_static = "^1.4.0"
