[package]
name = "env-file-reader"
version = "0.3.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Library for reading environment variables from an environment file"
keywords = ["environment"]
homepage = "https://github.com/jofas/env_file_reader"
repository = "https://github.com/jofas/env_file_reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "^0.19.7"

[dependencies]
logos = "^0.12.0"
lalrpop-util = "^0.19.7"
